# egg-info-repro

./: debug.patch  flake.nix  pyproject.toml
