[tool.poetry]
name = "egg-info-report"
version = "0.1.0"
description = ""
authors = ["asymmetric <lorenzo@mailbox.org>"]
readme = "README.md"
packages = [{include = "egg_info_report"}]

[tool.poetry.dependencies]
python = "^3.9"
eth-utils = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
